--- a/styles/scheduling.css
+++ b/styles/scheduling.css
@@ -6,7 +6,7 @@ main {
     flex-direction: column;
     justify-content: flex-start;
     width: 90%;
-    margin: 70px auto 0;
+    margin: 60px auto 0;
 }
 
     #my-cal-inline {
